tutorial_personalized/L02_expose_externally/manifests/analytics-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: analytics-service
  labels:
    app: shopinsights
    component: analytics-service
    tutorial: personalized
    lesson: "02"
spec:
  host: analytics-service-rh-ee-lkellers-dev.apps.rm1.0a51.p1.openshiftapps.com
  to:
    kind: Service
    name: analytics-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
